--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,20 @@
-.bge1{
+.mt20 {
+	margin-top: 10px;
+}
+.mt10{
+	margin-top: .1rem;
+}.mt5{
+	margin-top: .05rem;
+}
+.bge1 {
 	background: #e1e1e1;
 }
-.imgbox img{
-	display: block;width: 100%;
+
+.imgbox img {
+	display: block;
+	width: 100%;
 }
+
 .header {
 	position: fixed;
 	top: 0;
@@ -32,9 +43,11 @@
 	background-size: contain;
 	margin-right: .2rem;
 }
-.header .menu.active{
+
+.header .menu.active {
 	transform: rotate(90deg);
 }
+
 .menubox {
 	position: fixed;
 	top: 1.18rem;
@@ -54,21 +67,26 @@
 	opacity: 0;
 	transition: all .3s;
 }
-.menubox.active .mask{
+
+.menubox.active .mask {
 	opacity: 1;
 }
+
 .menubox .menulist {
 	width: 70%;
 	position: absolute;
-	left:100%;
+	left: 100%;
 	top: 0;
 	bottom: 0;
 	background: #282828;
-	overflow: auto;transition: all .3s;
+	overflow: auto;
+	transition: all .3s;
 }
-.menubox.active .menulist{
+
+.menubox.active .menulist {
 	left: 30%;
 }
+
 .menubox .menulist a {
 	display: block;
 	border-bottom: 1px solid #080808;
@@ -100,9 +118,11 @@
 .menubox .menulist .submenu {
 	display: none;
 }
-.menubox .menulist .subtitle.open+ .submenu{
+
+.menubox .menulist .subtitle.open+.submenu {
 	display: block;
 }
+
 .menubox .menulist .submenu a {
 	font-size: .26rem;
 	padding-left: .6rem;
@@ -118,80 +138,102 @@
 	width: 100%;
 }
 
-.footer{
+.footer {
 	background: #242424;
 	color: #fff;
 	font-size: .28rem;
 	padding: .37rem .3rem .46rem;
 }
-.footer .share{
+
+.footer .share {
 	margin-top: .15rem;
 	margin-bottom: .35rem;
 	overflow: hidden;
 }
-.footer .share i+i{
+
+.footer .share i+i {
 	margin-left: .1rem;
 }
-.footer .share i,.footer .icon6,.footer .icon5{
+
+.footer .share i,
+.footer .icon6,
+.footer .icon5 {
 	float: left;
 	display: block;
 	height: .4rem;
 	width: .4rem;
 	background: no-repeat center center;
 	background-size: contain;
-	
+
 }
-.footer .share i.icon1{
+
+.footer .share i.icon1 {
 	background-image: url(../img/icon1.png);
 }
-.footer .share i.icon2{
+
+.footer .share i.icon2 {
 	background-image: url(../img/icon2.png);
 }
-.footer .share i.icon3{
+
+.footer .share i.icon3 {
 	background-image: url(../img/icon3.png);
 }
-.footer .share i.icon4{
+
+.footer .share i.icon4 {
 	background-image: url(../img/icon4.png);
 }
-.footer .icon5{
+
+.footer .icon5 {
 	background-image: url(../img/icon5.png);
-	
+
 }
-.footer .icon6{
+
+.footer .icon6 {
 	background-image: url(../img/icon6.png);
-	
+
 }
-.footer .icon6,.footer .icon5{
+
+.footer .icon6,
+.footer .icon5 {
 	margin-right: .25rem;
 }
-.footer .telphone{
+
+.footer .telphone {
 	margin-top: .25rem;
 	margin-bottom: .15rem;
 }
-.footer .copyright{
+
+.footer .copyright {
 	margin-top: .3rem;
 	text-align: center;
 	border-top: 1px solid #fff;
 	line-height: .4rem;
-	padding: .2rem .45rem 0;font-size: .24rem;
+	padding: .2rem .45rem 0;
+	font-size: .24rem;
 }
-.footer{
+
+.footer {
 	position: relative;
 }
-.footer .qr{
+
+.footer .qr {
 	position: absolute;
 	background: #fff;
 	padding: .1rem;
 	top: .4rem;
 	right: .25rem;
-}.footer .qr img{
+}
+
+.footer .qr img {
 	display: block;
 	width: 1.4rem;
 }
-.modbox{
+
+.modbox {
 	background: #fff;
 }
-.modbox .modbox-hd{
+
+.modbox .modbox-hd {
 	line-height: 1.06rem;
 	border-bottom: 1px solid #d8d8d8;
 	padding: 0 .3rem 0 .55rem;
@@ -199,7 +241,8 @@
 	color: #333;
 	font-size: .38rem;
 }
-.modbox .modbox-hd:before{
+
+.modbox .modbox-hd:before {
 	content: '';
 	display: block;
 	height: .4rem;
@@ -210,7 +253,8 @@
 	top: 50%;
 	transform: translateY(-50%);
 }
-.modbox .modbox-hd:after{
+
+.modbox .modbox-hd:after {
 	content: '';
 	display: block;
 	position: absolute;
@@ -219,32 +263,198 @@
 	height: 100%;
 	top: 0;
 	background: url(../img/arrow.png) no-repeat center center;
-background-size: contain;
+	background-size: contain;
 }
-.areamenu{
-	margin:.3rem .15rem 0;
+
+.areamenu {
+	margin: .3rem .15rem 0;
 }
-.areamenu li{
+
+.areamenu li {
 	float: left;
 	width: 50%;
 	padding: 0 .15rem;
 	margin-bottom: .3rem;
 }
-.areamenu li a{
+
+.areamenu li a {
 	display: block;
 	width: 100%;
 	border-radius: .1rem;
 	overflow: hidden;
 	position: relative;
 }
- .areamenu li a .tip{
-	 position: absolute;
-	 left: 0;
-	 right: 0;
-	 bottom: 0;
-	 line-height: .6rem;
-	 text-align: center;
-	 color: #fff;
-	 font-size: .28rem;
-	 background: rgba(0,0,0,.5);
- }
+
+.areamenu li a .tip {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	line-height: .6rem;
+	text-align: center;
+	color: #fff;
+	font-size: .28rem;
+	background: rgba(0, 0, 0, .5);
+}
+
+.modbox-bd {
+	color: #333;
+	font-size: .26rem;
+	line-height: .42rem;
+}
+
+.aboutus .modbox-bd {
+	padding: .3rem .3rem .4rem;
+}
+
+.more {
+	color: #fff;
+	line-height: .5rem;
+	width: 2rem;
+	display: block;
+	border-radius: .5rem;
+	margin: .6rem auto 0;
+	background: #2494a0;
+	font-size: .26rem;
+	text-align: center;
+}
+
+.youshi .modbox-bd,
+.equipment .modbox-bd,
+.news .modbox-bd{
+	padding: .3rem;
+}
+
+.youshi .menu {
+	background: #282828;
+	color: #fff;
+	position: relative;
+}
+
+.youshi .menu:before {
+	content: '';
+	display: block;
+	height: 1px;
+	width: 6.3rem;
+	position: absolute;
+	background: rgba(255, 255, 255, .1);
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.youshi .menu i {
+	display: block;
+	width: .7rem;
+	height: .7rem;
+	margin: 0 auto .1rem;
+	background: no-repeat center center;
+	background-size: contain;
+}
+
+.youshi .menu li {
+	float: left;
+	width: 50%;
+	height: 50%;
+	position: relative;
+}
+
+.youshi .menu li:nth-child(2n+1):after {
+	content: '';
+	display: block;
+	width: 1px;
+	background: rgba(255, 255, 255, .1);
+	top: 50%;
+	right: 0;
+	height: 1rem;
+	position: absolute;
+	transform: translateY(-50%);
+}
+
+.youshi .menu li a {
+	display: block;
+	text-align: center;
+	color: #fff;
+	font-size: .3rem;
+	padding: .4rem 0;
+}
+
+.youshi .menu i.icon1 {
+	background-image: url(../img/icon7.png);
+}
+
+.youshi .menu i.icon2 {
+	background-image: url(../img/icon8.png);
+}
+
+.youshi .menu i.icon3 {
+	background-image: url(../img/icon9.png);
+}
+
+.youshi .menu i.icon4 {
+	background-image: url(../img/icon10.png);
+}
+
+.equipment .equlist {
+	margin: 0 -.15rem -.3rem;
+}
+
+.equipment .equlist li {
+	float: left;
+	width: 50%;
+	padding: 0 .15rem;
+	margin-bottom: .3rem;
+}
+
+.equipment .equlist li a {
+	display: block;
+	border: 1px solid #eee;
+}
+
+.equipment .equlist li .imgbox+div {
+	padding: .2rem;
+	border-top: 1px solid #eee;
+	font-size: .24rem;
+	color: #999;
+}
+
+.equipment .equlist li .imgbox+div p {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.equipment .equlist li .imgbox+div p:first-child {
+	font-size: .28rem;
+	color: #333;
+}
+.news .news-item a{
+	display: block;
+	position: relative;
+}.news .news-item a>img{
+	display: block;
+	width: 100%;
+}.news .news-item a .tip{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: .9rem;
+	color: #fff;
+	font-size: .28rem;
+	padding-left: .2rem;
+	background: rgba(0,0,0,.5);
+	line-height: .34rem;
+	padding-top: .1rem;
+}
+.news .news-item a .time i{
+	display: inline-block;
+	width: .25rem;
+	height: .25rem;
+	background: url(../img/time.png) no-repeat center center;
+	background-size: contain;
+	margin-right: .05rem;
+}
+.news .news-item a .time i,.news .news-item a .time span{
+	vertical-align: middle;
+}
