--- a/css/base.css
+++ b/css/base.css
@@ -137,7 +137,7 @@
 	padding-left: .6rem;
 }
 
-.header+div {
+.header~.banner {
 	padding-top: 1.18rem;
 }
 
@@ -574,11 +574,12 @@
 	bottom: 0;
 }
 
-.onetabnav.tabnav a{
+.onetabnav.tabnav a {
 	display: block;
 	text-align: center;
 	margin: 0 .3rem;
 }
+
 .company .imgbox {
 	padding: .3rem .3rem 0;
 	background: #fff;
@@ -833,28 +834,44 @@
 .honorbox#certify .swiper-slide {
 	background: none;
 }
-.friendlist,.knowlist{
+
+.friendlist,
+.knowlist,
+.arealist,
+.contact,
+.service {
 	padding: .3rem .3rem 0;
 	margin-bottom: .2rem;
 	background: #fff;
-}.friendlist ul{
+}
+
+.friendlist ul,.arealist ul {
 	margin: 0 -.15rem;
-}.friendlist ul li{
+}
+
+.friendlist ul li {
 	float: left;
 	width: 33.33%;
 	padding: 0 .15rem;
 	margin-bottom: .3rem;
-}.friendlist ul li a,.friendlist ul li img{
+}
+
+.friendlist ul li a,
+.friendlist ul li img {
 	display: block;
 	width: 100%;
-}.friendlist ul li a{
+}
+
+.friendlist ul li a {
 	border: 1px solid #eee;
 }
-.page{
+
+.page {
 	text-align: center;
 	padding: .2rem 0 .5rem;
 }
-.page a{
+
+.page a {
 	height: .5rem;
 	width: .8rem;
 	display: inline-block;
@@ -869,52 +886,108 @@
 .page a.prev {
 	background-image: url(../img/arrow3.png);
 }
+
 .page a.next {
 	background-image: url(../img/arrow2.png);
 }
-.knowlist ul{
-	
-}
-.knowlist li a{
+
+.knowlist li a {
 	display: block;
 	font-size: .26rem;
 	color: #666;
 	line-height: .42rem;
 	padding: .27rem 0;
 	border-bottom: 1px solid #eee;
-}.knowlist li a .imgbox{
+}
+
+.knowlist li a .imgbox {
 	width: 2.4rem;
 	margin-right: .2rem;
-	
+
 }
-.knowlist li a .name{
+
+.knowlist li a .name {
 	color: #333;
 	font-size: .28rem;
 	overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-}.knowlist li a  p{
-	overflow: hidden;
-		text-overflow: ellipsis;
-		display: -webkit-box;
-		-webkit-line-clamp: 2;
-		line-clamp: 2;
-		-webkit-box-orient: vertical;
-		margin-top: .1rem;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
-.company{
+
+.knowlist li a p {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	line-clamp: 2;
+	-webkit-box-orient: vertical;
+	margin-top: .1rem;
+}
+
+.company {
 	background: #fff;
 	padding: .3rem;
 	color: #333;
 	font-size: .28rem;
 	line-height: .42rem;
 }
-.company  img{
+
+.company img {
 	display: block;
 	width: 100%;
 	margin-top: .3rem;
 }
-.company .name{
+
+.company .name,
+.contact .name {
 	font-size: .3rem;
 	margin-bottom: .1rem;
+}
+
+.contact {
+	color: #333;
+	margin-bottom: .2rem;
+}
+
+.contact .input-group .input-row {
+	font-size: .28rem;
+	margin-bottom: .3rem;
+}
+
+.contact .input-group .input-row input,
+.contact .input-group .input-row textarea {
+	border: 1px solid #bfbfbf;
+	border-radius: .05rem;
+	line-height: .7rem;
+	display: block;
+	width: 100%;
+	margin-top: .1rem;
+	padding-left: .1rem;
+}
+
+.service img {
+	display: block;
+	width: 100%;
+}
+.arealist ul li{
+	float: left;
+	width: 50%;
+	padding: 0 .15rem;
+}.arealist ul li a{
+	display: block;
+	border: 1px solid #eee;
+}.arealist ul li a .txt{
+	padding: .15rem;
+	color: #333;
+	font-size: .28rem;
+}.arealist ul li a .txt p{
+	color: #999;
+	font-size: .24rem;
+	line-height: .34rem;
+	overflow: hidden;
+		text-overflow: ellipsis;
+		display: -webkit-box;
+		-webkit-line-clamp:2;
+		line-clamp: 2;
+		-webkit-box-orient: vertical;
 }
