--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,9 @@
 .mt20 {
 	margin-top: 10px;
 }
+.mt120{
+	margin-top: 1.2rem;
+}
 
 .mt10 {
 	margin-top: .1rem;
@@ -684,7 +687,10 @@
 }
 
 #certify .swiper-button-prev,
-#certify .swiper-button-next {
+#certify .swiper-button-next,
+.friendlist .swiper-button-prev,
+.friendlist .swiper-button-next
+{
 	height: .5rem;
 	width: .8rem;
 	display: block;
@@ -693,20 +699,32 @@
 	bottom: .4rem;
 	border-radius: .05rem;
 	background-size: .13rem auto;
+	border: 1px solid #2494a0;
 }
 
-#certify .swiper-button-prev {
+#certify .swiper-button-prev,
+.friendlist .swiper-button-prev{
 	left: 50%;
 	margin-left: -1rem;
 	background-image: url(../img/arrow3.png);
 }
 
-#certify .swiper-button-next {
+#certify .swiper-button-next,
+.friendlist .swiper-button-next{
 	left: 50%;
 	margin-left: .2rem;
 	background-image: url(../img/arrow2.png);
 }
-
+.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled{
+	opacity: 1;
+	background-color: #fff;
+	border: 1px solid #eee;
+}
+.friendlist .swiper-button-prev.swiper-button-disabled{
+	background-image: url(../img/arrow4.png);
+}.friendlist .swiper-button-next.swiper-button-disabled{
+	background-image: url(../img/arrow5.png);
+}
 #certify .imgbox {
 	background: #fff;
 	height: 3.8rem;
@@ -844,8 +862,11 @@
 	margin-bottom: .2rem;
 	background: #fff;
 }
-
-.friendlist ul,.arealist ul {
+.friendlist{
+	position: relative;padding-bottom: 1.4rem;
+}
+.friendlist ul,
+.arealist ul {
 	margin: 0 -.15rem;
 }
 
@@ -856,13 +877,13 @@
 	margin-bottom: .3rem;
 }
 
-.friendlist ul li a,
-.friendlist ul li img {
+.friendlist .swiper-slide a,
+.friendlist .swiper-slide img {
 	display: block;
 	width: 100%;
 }
 
-.friendlist ul li a {
+.friendlist .swiper-slide a {
 	border: 1px solid #eee;
 }
 
@@ -969,25 +990,77 @@
 	display: block;
 	width: 100%;
 }
-.arealist ul li{
+
+.arealist ul li {
 	float: left;
 	width: 50%;
 	padding: 0 .15rem;
-}.arealist ul li a{
+}
+
+.arealist ul li a {
 	display: block;
 	border: 1px solid #eee;
-}.arealist ul li a .txt{
+}
+
+.arealist ul li a .txt {
 	padding: .15rem;
 	color: #333;
 	font-size: .28rem;
-}.arealist ul li a .txt p{
+}
+
+.arealist ul li a .txt p {
 	color: #999;
 	font-size: .24rem;
 	line-height: .34rem;
 	overflow: hidden;
-		text-overflow: ellipsis;
-		display: -webkit-box;
-		-webkit-line-clamp:2;
-		line-clamp: 2;
-		-webkit-box-orient: vertical;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	line-clamp: 2;
+	-webkit-box-orient: vertical;
+}
+.newsbox{
+	background: #fff;
+	padding: .3rem;
+	color: #666;
+	font-size: .26rem;
+	line-height: .42rem;
+} .newsbox img{
+	display: block;
+	width: 100%;
+}
+ .newsbox .newsbox-bd{
+	 border-bottom: 1px solid #eee;
+	 border-top: 1px solid #eee;
+	 padding: .1rem 0 .4rem;
+ }
+  .newsbox .newsbox-hd{
+	  text-align: center;
+	  padding: .5rem 0 .2rem;
+	  color: #666;
+	  font-size: .24rem;
+  } .newsbox .newsbox-hd .title{
+	  font-size: .28rem;
+	  color: #333;
+  }.newsbox .newsbox-ft {
+	margin: 0 0 .3rem;
+	padding-top: .3rem;
+}
+
+.newsbox .newsbox-ft a {
+	display: block;
+	font-size: .26rem;
+	color: #666;
+	margin-bottom: 10px;
+}.newsbox .newsbox-ft a .link{
+	color: #2494a0;
+}
+.newsbox .newsbox-ft a.reback{
+	font-size: .26rem;
+	color: #666;
+	width: 1.8rem;
+	height: .5rem;
+	border: 1px solid #eee;
+	display: block;
+	text-align: center;
 }
